feat: add batch comments and hot articles
